--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ replay_pid*
 .project
 .settings/org.eclipse.jdt.core.prefs
 .settings/org.eclipse.m2e.core.prefs
+.gitattributes
+.settings/org.eclipse.core.resources.prefs
